--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://linkedin.com/'"
+            onclick="location.href='http://linkedin.com/in/alejandro-pozo-4a2016316'"
           />
           <img
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/'"
+            onclick="location.href='https://github.com/aepozos'"
           />
         </div>
       </div>
@@ -289,7 +289,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/aepozos/Home-lab-Wazuh-server'"
               >
                 Github
               </button>
@@ -308,7 +308,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/aepozos/AD-Project'"
               >
                 Github
               </button>
@@ -343,7 +343,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <p><a href="http://linkedin.com/in/alejandro-pozo-4a2016316">LinkedIn</a></p>
         </div>
       </div>
     </section>
